--- a/src/app/thanhly/thanhly/thanhly.component.html
+++ b/src/app/thanhly/thanhly/thanhly.component.html
@@ -1,64 +1,70 @@
 <p>thanhly works!</p>
-<button printSectionId="printdiv" styleSheetFile="asset/style.css" ngxPrint mat-raised-button
-  color="primary"><span class="material-icons">
+<button printSectionId="printdiv" styleSheetFile="assets/thanhly.css" ngxPrint mat-raised-button color="primary"><span
+    class="material-icons">
     print
   </span> IN</button><br><br>
 <div id="printdiv">
-  <div style="text-align: center;">
-    <p><b>CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</b></p>
-    <p><b>Độc lập – Tự do – Hạnh phúc.</b></p>
-    <p><b>--------o0o-------</b></p>
-    <p><b>BIÊN BẢN THANH LÝ HỢP ĐỒNG </b></p>
-  </div>
-  <br>
-
-  <div>
-    <p style=" text-indent: 35px;">-Căn cứ vào hợp đồng cung cấp dịch vụ Số: aaaaaaaaaaaaaaaaaaaaaa đã ký ngày
-      00/00/0000
-      giữa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa và Công Ty TNHH Công Nghệ và Truyền Thông Hà Nội;</p>
-    <p style=" text-indent: 35px;">-Căn cứ vào kết quả nghiệm thu khối lượng công việc hoàn thành, chương trình kết thúc
-      ngày 00 tháng 00 năm 0000.
-    </p>
-    <p>Hôm nay, Ngày 04 tháng 01 năm 2021</p>
-  </div>
-
-  <!-- ben a -->
-  <div>
-    <p><b>BÊN A: CÔNG TY TNHH QUẢNG CÁO VÀ GIẢI TRÍ T.O.P</b></p>
-
-    <p>Địa chỉ : 170N Nơ Trang Long, Phường 12, Quận Bình Thạnh, TP Hồ Chí Minh</p>
-    <p>VP giao dịch : 331 Bến Vân Đồn, Phường 1, Quận 4, TPHCM</p>
-    <p>Điện thoại : 028 6673 8686</p>
-    <p>Đại diện bởi : Ông Trần Đình Vân Trình Chức vụ: Giám đốc</p>
-    <p>MST : 0310775575</p>
-    <p><b>(Sau đây gọi tắt là Bên A)</b></p>
-
-
-    <!-- ben b -->
-
-    <p><b>BÊN B: CÔNG TY TNHH CÔNG NGHỆ VÀ TRUYỀN THÔNG HÀ NỘI</b></p>
-    <p>Địa chỉ : Số 43,TT33 Khu đô thị văn phú, P. Phú La, Q. Hà đông, Hà Nội</p>
-    <p>Mã số thuế : 0108188396</p>
-    <p>Số tài khoản : 6899996868 tại ngân hàng TMCP Á châu chi nhánh Hà Nội</p>
-    <p>Đại diện bởi : Ông Bùi Anh Duy Chức vụ: Giám Đốc</p>
-    <p><b>(Sau đây gọi tắt là Bên B)</b></p>
-
-
-    <!-- hai ben dong y .. -->
+  <div class="a4" style=" text-align: justify;padding-left: 30px;position: relative;">
+    <div style="text-align: center;">
+      <p><b>CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</b></p>
+      <p><b>Độc lập – Tự do – Hạnh phúc.</b></p>
+      <p><b>--------o0o-------</b></p>
+      <p><b>BIÊN BẢN THANH LÝ HỢP ĐỒNG </b></p>
+    </div>
+    <br>
 
     <div>
-      <p>- Hai Bên đồng ý ký biên bản thanh lý của hợp đồng số: 31122020/TOP-VGFX về việc cung cấp dịch vụ hiệu ứng sân
-        khấu bao
-        gồm lắp đặt, vận hành phục vụ chương trình “ECOPARK COUNT DOWN PARTY 2021” tại Công viên Hồ Thiên Nga, Khu đô
-        thị sinh
-        thái Ecopark, Văn Giang, Hưng Yên ngày 31/12/2020 theo yêu cầu cụ thể như sau:</p>
-      <p>Điều 1. Nội dung thanh lý:
-        Bên B đã hoàn thành việc cung cấp dịch vụ hiệu ứng sân khấu bao gồm lắp đặt, vận hành phục vụ chương trình
-        theo đúng nội dung hợp đồng, trong quá trình vận hành sử dụng không có sự cố, sai sót.
+      <p style="text-indent: 35px;line-height: 1.5;">-Căn cứ vào hợp đồng cung cấp dịch vụ Số: aaaaaaaaaaaaaaaaaaaaaa
+        đã ký ngày
+        00/00/0000
+        giữa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa và Công Ty TNHH Công Nghệ và Truyền Thông Hà Nội;</p>
+      <p style=" text-indent: 35px;line-height: 1.5;">-Căn cứ vào kết quả nghiệm thu khối lượng công việc hoàn thành, chương trình kết
+        thúc
+        ngày 00 tháng 00 năm 0000.
       </p>
-      <br>
+      <p>Hôm nay, Ngày 04 tháng 01 năm 2021</p>
+    </div>
+
+    <!-- ben a -->
+    <div style="line-height: 1.5;">
+      <p><b>BÊN A: CÔNG TY TNHH QUẢNG CÁO VÀ GIẢI TRÍ T.O.P</b></p>
+
+      <p>Địa chỉ <span style="position: absolute;left: 130px;">: 170N Nơ Trang Long, Phường 12, Quận Bình Thạnh, TP Hồ Chí Minh</span></p>
+      <p>VP giao dịch <span style="position: absolute;left: 130px;">: 331 Bến Vân Đồn, Phường 1, Quận 4, TPHCM</span></p>
+      <p>Điện thoại <span style="position: absolute;left: 130px;">: 028 6673 8686</span></p>
+      <p>Đại diện bởi <span style="position: absolute;left: 130px;">: Ông Trần Đình Vân Trình Chức vụ: Giám đốc</span></p>
+      <p>MST <span style="position: absolute;left: 130px;">: 0310775575</span></p>
+      <p><b>(Sau đây gọi tắt là Bên A)</b></p>
+
+
+      <!-- ben b -->
+
+      <p><b>BÊN B: CÔNG TY TNHH CÔNG NGHỆ VÀ TRUYỀN THÔNG HÀ NỘI</b></p>
+      <p>Địa chỉ <span style="position: absolute;left: 130px;">: Số 43,TT33 Khu đô thị văn phú, P. Phú La, Q. Hà đông, Hà Nội</span></p>
+      <p>Mã số thuế <span style="position: absolute;left: 130px;">: 0108188396</span></p>
+      <p>Số tài khoản <span style="position: absolute;left: 130px;">: 6899996868 tại ngân hàng TMCP Á châu chi nhánh Hà Nội</span></p>
+      <p>Đại diện bởi <span style="position: absolute;left: 130px;">: Ông Bùi Anh Duy Chức vụ: Giám Đốc</span></p>
+      <p><b>(Sau đây gọi tắt là Bên B)</b></p>
+
+
+      <!-- hai ben dong y .. -->
+
+      <div style="margin-left: 30px;">
+        <p style="line-height: 1.5;">- Hai Bên đồng ý ký biên bản thanh lý của hợp đồng số: 31122020/TOP-VGFX về việc
+          cung cấp dịch vụ hiệu ứng
+          sân
+          khấu bao
+          gồm lắp đặt, vận hành phục vụ chương trình “ECOPARK COUNT DOWN PARTY 2021” tại Công viên Hồ Thiên Nga, Khu đô
+          thị sinh
+          thái Ecopark, Văn Giang, Hưng Yên ngày 31/12/2020 theo yêu cầu cụ thể như sau:</p>
+        <p>Điều 1. Nội dung thanh lý:
+          Bên B đã hoàn thành việc cung cấp dịch vụ hiệu ứng sân khấu bao gồm lắp đặt, vận hành phục vụ chương trình
+          theo đúng nội dung hợp đồng, trong quá trình vận hành sử dụng không có sự cố, sai sót.
+        </p>
+        <br>
+      </div>
       <!-- table -->
-      <div class="table" style="border-collapse: collapse;text-align: center;">
+      <div class="table" style="border-collapse: collapse;text-align: center;margin-left: 10px;">
         <table border="1" style="width: 100%;border-collapse: collapse;">
           <tr>
             <th style="padding: 10px 5px;">STT</th>
@@ -68,32 +74,71 @@
             <th style="padding: 10px 5px;">Số lượng</th>
             <th style="padding: 10px 5px;">Thành Tiền</th>
           </tr>
-          <!-- <tr *ngFor="let item of dataTable">
-            <td style="text-align: center;">{{item.Stt}}</td>
-            <td style="text-align: center;">{{item.HangMuc}}</td>
-            <td style="text-align: center;">{{item.Dvt}}</td>
-            <td style="text-align: center;">{{item.DonGia | tiente}}</td>
-            <td style="text-align: center;">{{item.SoLuong}}</td>
-            <td style="text-align: center;">{{item.ThanhTien | tiente}}</td>
-          </tr>
           <tr>
-            <td colspan="5" style="text-align: center;"><b>Tổng</b></td>
-            <td style="text-align: center;"><b>{{ tong | tiente}}</b></td>
+            <td style="text-align: center;">I</td>
+            <td colspan="5" style="text-align: left;padding: 10px 5px;"><b>DANH MỤC THIẾT BỊ</b></td>
           </tr>
-          <tr>
-            <td colspan="5" style="text-align: center;"><b>VAT</b></td>
-            <td style="text-align: center;"><b>{{ vat | tiente }}</b></td>
-          </tr>
-          <tr>
-            <td colspan="5" style="text-align: center;"><b>Tổng giá trị hợp đồng</b></td>
-            <td style="text-align: center;"><b>{{ tongAll | tiente}}</b></td>
-          </tr> -->
+          <!-- FOR -->
 
+          <!-- FOR -->
+          <tr>
+            <td style="text-align: center;">II</td>
+            <td colspan="4" style="padding: 10px 5px;"><b>TỔNG CHI PHÍ</b></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td style="padding: 10px 5px;"></td>
+            <td colspan="4" style="padding: 10px 5px;"><b>THUẾ VAT 10%</b></td>
+            <td style="padding: 10px 5px;"></td>
+
+          </tr>
+          <tr>
+            <td style="padding: 10px 5px;text-align: center;">III</td>
+            <td colspan="4" style="padding: 10px 5px;"><b>TỔNG CHI PHÍ (Đã bao gồm thuế VAT 10%)</b></td>
+            <td ></td>
+
+          </tr>
         </table>
-        <p class="tongtien text-left"><b>Tổng tiền trên đã bao gồm 10%VAT</b></p>
+
+      </div>
+
+      <div style="margin-left: 60px;">
+        <p><b>Điều 2: Giá trị thanh lý & thanh toán:</b></p>
+        <p>+ Giá trị hợp đồng (Bao gồm VAT 10%)v `: 141.900.000VNĐ</p>
+        <p>+ Giá trị Phát sinh (Bao gồm VAT 10%): 0 VNĐ</p>
+        <p>+ Giá trị thanh lý (Bao gồm VAT 10%) : 141.900.000 VNĐ</p>
+        <p>+ Đã thanh toán : 70.950.000 VNĐ</p>
+        <p>+ Bên A còn phải thanh toán cho bên B : 70.950.000 VNĐ</p>
+        <p> (Bằng chữ: Bảy mươi triệu chín trăm năm mươi nghìn đồng chẵn./.)</p>
+        <p><span><b>+ Hình thức thanh toán:</b></span><span>Chuyển khoản.</span></p>
+        <p>Bên A có trách nhiệm thanh toán cho bên B số tiền là:70.950.000 VNĐ (Bằng chữ: Bảy mươi triệu chín trăm năm
+          mươi nghìn đồng chẵn.) theo đúng quy định của Hợp đồng.</p>
+      </div>
+
+      <div>
+        <p><b>Điều 3: Điều khoản chung:</b></p>
+        <p style="text-indent: 35px">Biên bản Thanh lý này có hiệu lực kể từ ngày ký. Biên bản Thanh lý là một phần không tách rời của Hợp đồng
+        </p>
+        <p style="text-indent: 35px">Sau khi các Bên hoàn thành đầy đủ các nghĩa vụ theo quy định tại Hợp đồng và Biên bản thanh lý này. bao gồm
+          cả nghĩa vụ xuất hóa đơn của Bên B và nghĩa vụ thanh toán của Bên A thì Hợp đồng chấm dứt.</p>
+        <p style="text-indent: 35px">Biên bản thanh lý hợp đồng này được lập thành 04 (bốn) bản. Bên A giữ 02 (hai) bản, bên B giữ 02 (hai) bản,
+          có giá trị pháp lý như nhau.</p>
+      </div>
+
+
+      <!-- ký -->
+
+      <div>
+        <p><span> ĐẠI DIỆN BÊN A</span><span>ĐẠI DIỆN BÊN B</span></p>
+        <br>
+        <br>
+        <br>
+
+        <p><span> Trần Đình Vân Trình </span><span>Bùi Anh Duy</span></p>
+
       </div>
     </div>
   </div>
 
-
 </div>
+
