--- a/src/app/hopdong/popup/hopdong.popup.html
+++ b/src/app/hopdong/popup/hopdong.popup.html
@@ -26,7 +26,7 @@
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Mã định danh</mat-label>
-                <input matInput [(ngModel)]="ob.data.maKH" name="makh">
+                <input matInput [(ngModel)]="ob.data.maKH" name="makh1">
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Tên bên A</mat-label>
@@ -51,7 +51,7 @@
             <br>
             <mat-form-field appearance="fill">
                 <mat-label>Mã tài khoản</mat-label>
-                <input matInput [(ngModel)]="ob.data.soTK" name="mst">
+                <input matInput [(ngModel)]="ob.data.soTK" name="mst1">
             </mat-form-field>
             <br>
             <mat-form-field appearance="fill">
