--- a/src/assets/thanhly.css
+++ b/src/assets/thanhly.css
@@ -4,7 +4,7 @@
         page-break-inside: auto;
     }
   }
-  
+
   @page a4 {
     size: 29.7cm 21cm;
     mso-page-orientation: landscape;
@@ -13,10 +13,16 @@
     /* margin: auto; */
     text-align: justify;
     padding-top: 1.25cm;
-    padding-left: 10.06cm;
+    padding-left: 2.5cm;
     padding-bottom: 0.75cm;
-    padding-right: 1.43cm;
+    padding-right: 2.5cm;
     width: 23cm;
     height: 29.7cm;
     background-color: red;
+    font-size: 13pt;
+  }
+
+
+  p{
+    font-size: 13pt;
   }
